lib/src/compiler/tests/testdata/errors/61.out
error: duplicate tag `tag1`
   ╭─[line:1:58]
   │
 1 │ import "test_proto2"import "test_proto3"rule test : tag1 tag1 { condition: true }
   │                                                          ──┬─  
   │                                                            ╰─── duplicate tag
───╯
